# termpack

./: .gitignore  Brewfile  README.md  pyproject.toml
example/: document.rtf  icon.icns  script.sh
termpack/: main.py  template.txt
